--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,14 +19,14 @@ x-airflow-common:
     _AIRFLOW_WWW_USER_EMAIL: ${_AIRFLOW_WWW_USER_EMAIL?}
     _AIRFLOW_WWW_USER_USERNAME: ${_AIRFLOW_WWW_USER_USERNAME?}
     _AIRFLOW_WWW_USER_PASSWORD: ${_AIRFLOW_WWW_USER_PASSWORD?}
-    
+
   volumes:
     - ${AIRFLOW_PROJ_DIR}/dags:/opt/airflow/dags
     - ${AIRFLOW_PROJ_DIR}/logs:/opt/airflow/logs
     - ${AIRFLOW_PROJ_DIR}/config:/opt/airflow/config
     - ${AIRFLOW_PROJ_DIR}/plugins:/opt/airflow/plugins
     - ${AIRFLOW_PROJ_DIR}/data:/opt/airflow/data
-  user: "${AIRFLOW_UID}:0"
+  user: "${AIRFLOW_UID}:${AIRFLOW_UID}"
   depends_on:
     &airflow-common-depends-on
     redis:
