--- a/etl/Dockerfile
+++ b/etl/Dockerfile
@@ -1,9 +1,13 @@
 FROM apache/airflow:2.9.0-python3.10
+
 USER root
 RUN apt-get update \
   && apt-get install -y --no-install-recommends \
   && apt-get autoremove -yqq --purge \
   && apt-get clean \
-  && rm -rf /var/lib/apt/lists/*
-  
+  && rm -rf /var/lib/apt/lists/* \
+  && mkdir -p /opt/airflow/data \
+  && chown -R airflow:airflow /opt/airflow/data \
+  && chmod -R 775 /opt/airflow/data
+
 USER airflow
