--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ pytz = "^2024.1"
 beautifulsoup4 = "^4.12.3"
 lxml = "^5.2.2"
 requests = "^2.32.2"
+python-dotenv = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core"]
