--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ x-airflow-common:
   environment:
     &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
-    AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://${POSTGRES_USER?}:${POSTGRES_PASSWORD?}@postgres/${POSTGRES_DB?}
-    AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://${POSTGRES_USER?}:${POSTGRES_PASSWORD?}@postgres/${POSTGRES_DB?}
+    AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://${AIRFLOW_POSTGRES_USER}:${AIRFLOW_POSTGRES_PASSWORD}@airflow-postgres/${AIRFLOW_POSTGRES_DB}
+    AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://${AIRFLOW_POSTGRES_USER}:${AIRFLOW_POSTGRES_PASSWORD}@airflow-postgres/${AIRFLOW_POSTGRES_DB}
     AIRFLOW__CELERY__BROKER_URL: redis://:@redis:6379/0
     AIRFLOW__CORE__FERNET_KEY: ''
     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'false'
@@ -16,9 +16,9 @@ x-airflow-common:
     AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: 'true'
     AIRFLOW__CORE__DEFAULT_TIMEZONE: 'Asia/Seoul'
 
-    _AIRFLOW_WWW_USER_EMAIL: ${_AIRFLOW_WWW_USER_EMAIL?}
-    _AIRFLOW_WWW_USER_USERNAME: ${_AIRFLOW_WWW_USER_USERNAME?}
-    _AIRFLOW_WWW_USER_PASSWORD: ${_AIRFLOW_WWW_USER_PASSWORD?}
+    _AIRFLOW_WWW_USER_EMAIL: ${_AIRFLOW_WWW_USER_EMAIL}
+    _AIRFLOW_WWW_USER_USERNAME: ${_AIRFLOW_WWW_USER_USERNAME}
+    _AIRFLOW_WWW_USER_PASSWORD: ${_AIRFLOW_WWW_USER_PASSWORD}
 
   volumes:
     - ${AIRFLOW_PROJ_DIR}/dags:/opt/airflow/dags
@@ -31,20 +31,37 @@ x-airflow-common:
     &airflow-common-depends-on
     redis:
       condition: service_healthy
-    postgres:
+    airflow-postgres:
       condition: service_healthy
 
 services:
-  postgres:
-    image: "postgres:${POSTGRES_VERSION?}"
+  airflow-postgres:
+    image: "postgres:${AIRFLOW_POSTGRES_VERSION}"
+    container_name: airflow-postgres
     environment:
-      POSTGRES_USER: ${POSTGRES_USER?}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD?}
-      POSTGRES_DB: ${POSTGRES_DB?}
+      POSTGRES_USER: ${AIRFLOW_POSTGRES_USER}
+      POSTGRES_PASSWORD: ${AIRFLOW_POSTGRES_PASSWORD}
+      POSTGRES_DB: ${AIRFLOW_POSTGRES_DB}
     volumes:
       - postgres-db-volume:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD", "pg_isready", "-U", "${POSTGRES_USER}"]
+      test: ["CMD", "pg_isready", "-U", "${AIRFLOW_POSTGRES_USER}"]
+      interval: 10s
+      retries: 5
+      start_period: 5s
+    restart: always
+
+  backend-postgres:
+    image: "postgres:${AIRFLOW_POSTGRES_VERSION}"
+    container_name: backend-postgres
+    environment:
+      POSTGRES_USER: ${BACKEND_POSTGRES_USER}
+      POSTGRES_PASSWORD: ${BACKEND_POSTGRES_PASSWORD}
+      POSTGRES_DB: ${BACKEND_POSTGRES_DB}
+    volumes:
+      - backend-postgres-db-volume:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "${BACKEND_POSTGRES_USER}"]
       interval: 10s
       retries: 5
       start_period: 5s
@@ -166,7 +183,7 @@ services:
         if (( disk_available < one_meg * 10 )); then
           echo
           echo -e "\033[1;33mWARNING!!!: Not enough Disk space available for Docker.\e[0m"
-          echo "At least 10 GBs recommended. You have $$(numfmt --to iec $$((disk_available * 1024 )))"
+          echo "At least 10GB of disk space recommended. You have $$(numfmt --to iec $$((disk_available * 1024)))"
           echo
           warning_resources="true"
         fi
@@ -226,11 +243,15 @@ services:
     command: [ "--host", "0.0.0.0", "--port", "80" ]
     environment:
       SERVER_URL: ${SERVER_URL}
+      DATABASE_URL: postgresql://${BACKEND_POSTGRES_USER}:${BACKEND_POSTGRES_PASSWORD}@${BACKEND_POSTGRES_HOST}:${BACKEND_POSTGRES_PORT}/${BACKEND_POSTGRES_DB}
     ports:
       - "80:80"
     volumes:
       - ./backend/app:/code/app/
       - ${AIRFLOW_PROJ_DIR?}/data:/opt/airflow/data
+    depends_on:
+      - backend-postgres
 
 volumes:
   postgres-db-volume:
+  backend-postgres-db-volume:
